--- a/elements.html
+++ b/elements.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+g<!DOCTYPE HTML>
 
 <html>
 	<head>
@@ -32,8 +32,15 @@
 
 				<!-- Content -->
 					<h2 id="content">Web Developer</h2>
-					<p>Sorted out a few , still yet Exploring the contents of Web Development through Various Languages</p>
+					<p>Sorted out a few , still yet Exploring the contents of Web Development through Various Languages .</p>
 				<hr class="major" />
+				<h2 id="content">Amateur Programmer</h2>
+<p>Intermediate levels on HTML , CSS , Java , JS , Python and Advanced in C , C++ </p>
+<hr class="major" />
+<h2 id="content">Databases</h2>
+<p>Intermediate levels on MySQL and PostgreSQL</p>
+<hr class="major" />
+
 
 
 	</body>
