--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 				<div class="inner">
 					<div class="flex">
 						<ul class="icons">
+							<h3>Need to Contact me  ?? Ping through any of the following Media </h3>
 							<li><a href="https://www.facebook.com/arun.gokul.355" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
+							<li><a href="https://twitter.com/iamarungokul5" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/arun-gokul-59b1b4115/" class="icon fa-linkedin">fa-5x<span class="label">linkedIn</span></a></li>
 						</ul>
 					</div>
 				</div>
