--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 		<!-- Footer -->
 			<footer id="footer">
+		<section id="tony">
 				<div class="inner">
 					<div class="flex">
 						<ul class="icons">
@@ -40,7 +41,9 @@
 						</ul>
 					</div>
 				</div>
+			</section>
 			</footer>
+
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
