--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 			<header id="header">
 				<div class="inner">
 					<nav id="nav">
-						<h4> <a href="index.html">Home</a> </h4>
-						<h4> <a href="generic.html">Contact Me</a> </h4>
-						<h4> <a href="elements.html">About</a> </h4>
+						<h4> <a href="index.html">Home</a>
+						 <a href="generic.html">Contact Me</a>
+						 <a href="elements.html">About</a> </h4>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
@@ -34,9 +34,9 @@
 					<div class="flex">
 						<ul class="icons">
 							<h3>Need to Contact me ?? Ping through any of the following Media </h3>
-					<center>		<li><a href="https://www.facebook.com/arun.gokul.355" class="icon fa-facebook"><span class="label">Facebook</span></a></li></center>
-							<center> <li><a href="https://twitter.com/iamarungokul5" class="icon fa-twitter"><span class="label">Twitter</span></a></li></center>
-							<center><li><a href="https://www.linkedin.com/in/arun-gokul-59b1b4115/" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li></center>
+					<center>		<li><a href="https://www.facebook.com/arun.gokul.355" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							 <li><a href="https://twitter.com/iamarungokul5" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/arun-gokul-59b1b4115/" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li></center>
 						</ul>
 					</div>
 				</div>
