--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<header id="header">
 				<div class="inner">
 					<nav id="nav">
-						<h4> <a href="index.html">Home</a>
+						<a href="index.html"><h4>Home</h3></a>
 						 <a href="generic.html">Contact Me</a>
 						 <a href="elements.html">About</a> </h4>
 					</nav>
