--- a/generic.html
+++ b/generic.html
@@ -16,7 +16,6 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">Theory</a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
 						<a href="generic.html">Contact Me</a>
@@ -31,9 +30,11 @@
 				<div class="inner">
 					<div class="flex">
 						<ul class="icons">
-							<li><a href="https://www.facebook.com/arun.gokul.355" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
+							<center>			<h3>Need to Contact me ?? Ping through any of the following Media . </h3> <center>
+								<center>			<h3>Get your Response in a Maximum time of 45 Minutes </h3> <center>
+				<center>			<li><a href="https://www.facebook.com/arun.gokul.355" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="https://twitter.com/iamarungokul5"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="https://www.linkedin.com/in/arun-gokul-59b1b4115/"><span class="label">linkedIn</span></a></li> <center>
 						</ul>
 					</div>
 				</div>
