--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<header id="header">
 				<div class="inner">
 					<nav id="nav">
-						<a href="index.html"><h4>Home</h3></a>
+						<a href="index.html">Home</a>
 						 <a href="generic.html">Contact Me</a>
 						 <a href="elements.html">About</a> </h4>
 					</nav>
@@ -33,7 +33,7 @@
 				<div class="inner">
 					<div class="flex">
 						<ul class="icons">
-							<h3>Need to Contact me ?? Ping through any of the following Media </h3>
+				<center>			<h3>Need to Contact me ?? Ping through any of the following Media </h3> <center>
 					<center>		<li><a href="https://www.facebook.com/arun.gokul.355" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							 <li><a href="https://twitter.com/iamarungokul5" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.linkedin.com/in/arun-gokul-59b1b4115/" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li></center>
