--- a/generic.html
+++ b/generic.html
@@ -32,9 +32,9 @@
 						<ul class="icons">
 							<center>			<h3>Need to Contact me ?? Ping through any of the following Media . </h3> <center>
 								<center>			<h3>Get your Response in a Maximum time of 45 Minutes </h3> <center>
-				<center>			<li><a href="https://www.facebook.com/arun.gokul.355" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="https://twitter.com/iamarungokul5"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="https://www.linkedin.com/in/arun-gokul-59b1b4115/"><span class="label">linkedIn</span></a></li> <center>
+									<center>		<li><a href="https://www.facebook.com/arun.gokul.355" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+											 <li><a href="https://twitter.com/iamarungokul5" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+											<li><a href="https://www.linkedin.com/in/arun-gokul-59b1b4115/" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li></center>
 						</ul>
 					</div>
 				</div>
