--- a/generic.html
+++ b/generic.html
@@ -29,17 +29,13 @@
 			<section>
 				<div class="inner">
 					<div class="flex">
-						div {
-    height: 200px;
-    width: 400px;
-    background: black;
-
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    margin-top: -100px;
-    margin-left: -200px;
-}
+						<div height=200px> <div width=400px>
+    <div background=black>
+    <div position=fixed>
+    <div top=50%>
+    <div left=50%>
+    <div margin-top=-100px>
+    <div margin-left=-200px>
 						<ul class="icons">
 				<center><h3>Need to Contact me ?? Ping through any of the following Media . </h3> <center>
 			<center><h3>Get your Response in a Maximum time of 45 Minutes </h3> <center>
