--- a/index.html
+++ b/index.html
@@ -24,12 +24,23 @@
 			<section id="banner">
 				<h1>Arun Gokul</h1>
 				<p>Web Developer , Programmer , Comic Fanboy , Amateur AI Learner</p>
+			</section>
 
-						<p>Need to Contact me ?? Ping through any of the following Media <p>
-					<center>		<li><a href="https://www.facebook.com/arun.gokul.355" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+
+		<!-- Footer -->
+
+		<footer>
+				<div class="inner">
+					<div class="flex">
+						<ul class="icons">
+				<center>			<h2>Need to Contact me ?? Ping through any of the following Media </h2> </center>
+					<center><li><a href="https://www.facebook.com/arun.gokul.355" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							 <li><a href="https://twitter.com/iamarungokul5" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.linkedin.com/in/arun-gokul-59b1b4115/" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li></center>
-			</section>
+						</ul>
+					</div>
+				</div>
+			</footer>
 
 
 
