--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<div class="flex">
 						<ul class="icons">
 							<hr></hr>
-				<center>			<h2><b> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; Need to Contact me ?? Ping through any of the following Media </b></h2> </center>
+				<center>			<h2><b> &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; Need to Contact me ?? Ping through any of the following Media </b></h2> </center>
 					<center><li><a href="https://www.facebook.com/arun.gokul.355" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							 <li><a href="https://twitter.com/iamarungokul5" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.linkedin.com/in/arun-gokul-59b1b4115/" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
