--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 		<!-- Footer -->
 
 		<footer>
-				<div class="inner">
+<style>
+background-color:#000000;
+	<div class="inner">
 					<div class="flex">
 						<ul class="icons">
 							<hr></hr>
@@ -42,6 +44,7 @@
 						</ul>
 					</div>
 				</div>
+				</style>
 			</footer>
 
 
